--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "gulp-uglify": "^1.5.1"
   },
   "devDependencies": {
-    "gulp-sass": "^2.3.2"
+    "browser-sync": "^2.13.0",
+    "gulp-browserify": "^0.5.1",
+    "gulp-imagemin": "^3.0.1",
+    "gulp-sass": "^2.3.2",
+    "gulp-util": "^3.0.7",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
