--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "gulp-uglify": "^1.5.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.13.0",
+    "browser-sync": "^2.18.2",
+    "browserify": "^13.1.1",
+    "gulp": "^3.9.1",
     "gulp-browserify": "^0.5.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-sass": "^2.3.2",
