--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "gulp"
+    "start": "./node_modules/.bin/gulp"
   },
   "author": "",
   "license": "ISC",
