--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-concat": "^2.6.0",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1"
   },
   "devDependencies": {
@@ -22,7 +21,9 @@
     "gulp-browserify": "^0.5.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^2.6.0",
     "gulp-util": "^3.0.7",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
