--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
   "presets": ["env"],
-  "plugins": [
-    ["transform-react-jsx", { "pragma": "h" }]
-  ]
+  "plugins": [["transform-react-jsx", { "pragma": "h" }]]
 }
