update models and reducers

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,7 @@
 {
   "presets": ["env"],
-  "plugins": [["transform-react-jsx", { "pragma": "h" }]]
+  "plugins": [
+    ["transform-react-jsx", { "pragma": "h" }],
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
