--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "node-sass": "^4.7.2",
     "parcel-bundler": "^1.4.1",
     "prettier": "^1.12.1",
+    "sass": "^1.17.3",
     "typescript": "^2.8.3"
   }
 }
