--- a/package.json
+++ b/package.json
@@ -27,10 +27,9 @@
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.13.0",
     "parcel-bundler": "^1.4.1",
     "prettier": "^1.12.1",
-    "sass": "^1.17.3",
-    "typescript": "^2.8.3"
+    "sass": "^1.17.3"
   }
 }
